kubernetes/apps/security-system/onepassword-connect/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: onepassword-connect-ingress
spec:
  endpointSelector:
    matchLabels:
      app: onepassword-connect
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": security-system
            "app.kubernetes.io/name": external-secrets
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # vmagent scrapes connect-api /metrics on the same port
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": monitoring-system
            "app.kubernetes.io/name": vmagent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
